--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
+  "name": "challenge10",
+  "version": "1.0.0",
+  "scripts": {
+    "test": "jest" 
+  },
   "dependencies": {
-    "inquirer": "^8.2.4",
-    "jest": "^29.7.0"
+  },
+  "devDependencies": {
   }
 }
